# PyComparse

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  WAT.txt  app.js  arena_test.c  ast.c  ast.h  ast_expression_types.h  ast_fold_constants.c  ast_fold_constants.h  ast_statement_types.h  ast_types.h  ast_unparse.c  ast_unparse.h  benchy.sh  codegen.c  codegen.h  codegen_ast.c  codegen_ast.h  codegen_expression.c  codegen_expression.h  codegen_statement.c  codegen_statement.h  codegen_types.h  cpython_lib_known_failures.txt  diagnostics.c  diagnostics.h  diagnostics_types.h  encoding.c  encoding.h  index.html  nullable.h  object.c  object.h  (+41 more)
adt/: arena.h  bitfiddle.h  dynmemory.h  hashset.h  idynarray.h  obst.h  stack.h
bench_results/: bench-all-08e5bf1.json  bench-all-b58f86b.json  bench-all-b58f86b.tsv  bench-all.json  bench-synthetic-large-b58f86b.json  bench-synthetic-large-b58f86b.tsv  bench-synthetic-large.json
include/pycomparse/: ast.h  ast_expression_types.h  ast_fold_constants.h  ast_statement_types.h  ast_types.h  ast_unparse.h  codegen.h  codegen_expression.h  codegen_statement.h  codegen_types.h  diagnostics.h  diagnostics_types.h  encoding.h  object.h  object_intern.h  object_intern_types.h  object_types.h  opcodes.h  parser.h  parser_types.h  scanner.h  scanner_location.h  scanner_types.h  symbol_info_types.h  symbol_table.h  symbol_table_types.h  symbol_types.h  token_kinds.h  tokens.h  unicode_name_lookup.h  unicode_name_table.h  unicode_nfkc_table.h  unicode_xid_table.h  util.h  writer.h
include/pycomparse/adt/: arena.h  bitfiddle.h  dynmemory.h  hash.h  hashset.h  idynarray.h  stack.h
obstack/: obstack.c  obstack.h
scripts/: benchmark_compile_perf.py  build_pgo_lto.py  build_pgo_lto.sh  check_cpython_lib.py  check_cpython_lib.sh  compare_bytecode.py  decode.py  format.sh  format_lint_py.sh  gen_nfkc_table.py  gen_unicode_name_table.py  gen_xid_table.py  generate_large_python_files.py  make_maxindent.py  pytokenize.py  run_fuzzer.py  run_fuzzer.sh  runpy.py  test.py
src/: adt_test.c  arena_test.c  ast.c  ast_fold_constants.c  ast_unparse.c  codegen.c  codegen_expression.c  codegen_statement.c  diagnostics.c  encoding.c  fuzz_compile.c  object.c  object_intern.c  parser.c  pycomparse.c  scanner.c  scanner_test.c  symbol_table.c  unicode_name_lookup.c  unicode_name_table.c  unicode_nfkc_table.c  unicode_xid_table.c  util.c  writer.c
test/: args.py  assign.py  bad_indent.txt  bytes_unicode_escape.py  class_classcell_pathology.py  comparisons.py  constant_fold.py  constant_fold_sequences.py  constant_fold_unary_not.py  constant_if_false_bytecode.py  control.py  def_annotation.py  def_parameters.py  def_parameters2.py  def_parameters_defaults.py  def_parameters_kwonly_bare_star.py  def_parameters_posonly.py  def_simple.py  expr_async_comprehension.py  expr_async_generator_expression_sync.py  expr_attr.py  expr_await.py  expr_binop_assign.py  expr_bitops.py  expr_call.py  expr_call_ex.py  expr_comparison.py  expr_comparison_multi.py  expr_conditional.py  expr_dict_comprehension.py  expr_dict_const_key_map_reuse.py  expr_dict_display.py  expr_dict_display_const_key_map.py  expr_dict_display_star.py  expr_dunder_debug.py  expr_fstring_docstring.py  expr_generator.py  expr_genexpr_closure_capture.py  expr_in_set.py  expr_lambda.py  (+123 more)
test/compile_only/: float_extreme_exponents.py  future_barry_as_flufl.py
test/errors/: annotation_starred_value.py  annotation_starred_value.py.expected  call_starred_generator_argument.py  call_starred_generator_argument.py.expected  call_starstar_generator_argument.py  call_starstar_generator_argument.py.expected  comprehension_starred_element.py  comprehension_starred_element.py.expected  def_annotations.py  def_annotations.py.expected  def_duplicate_parameter.py  def_duplicate_parameter.py.expected  def_parameters.py  def_parameters.py.expected  def_parameters_bare_star.py  def_parameters_bare_star.py.expected  def_parameters_posonly.py  def_parameters_posonly.py.expected  del_starred_target.py  del_starred_target.py.expected  expr_assign.py  expr_assign.py.expected  expr_async_comprehension_non_async.py  expr_async_comprehension_non_async.py.expected  expr_await_non_async.py  expr_await_non_async.py.expected  expr_call_positional_after_keyword.py  expr_call_positional_after_keyword.py.expected  expr_conditional.py  expr_conditional.py.expected  expr_dict_star_key.py  expr_dict_star_key.py.expected  expr_dictcomp_invalid_target.py  expr_dictcomp_invalid_target.py.expected  expr_fstring_star.py  expr_fstring_star.py.expected  expr_lambda_async_comprehension_in_async_function.py  expr_lambda_async_comprehension_in_async_function.py.expected  expr_lambda_await_in_async_function.py  expr_lambda_await_in_async_function.py.expected  (+133 more)
test/options/: toplevel_function_fastlocals.py  toplevel_function_fastlocals.py.test.json
test/options/compile_only/: barry_as_flufl_cli.py  barry_as_flufl_cli.py.test.json  future_barry_as_flufl.py  future_barry_as_flufl.py.test.json  nonlocal___class__.py
test/options/interactive/: interactive_backslash_continuation.txt  interactive_def_block_matmul.txt  interactive_def_block_matmul.txt.test.json  interactive_error.txt.test.json  interactive_fstring_triple.txt  interactive_if_block.txt  interactive_multi_statement.txt.test.json  interactive_parenthesized_expression.txt  interactive_triple_string.txt  interactive_triple_string.txt.test.json
test/options/optimize/: assert_disabled_O.py  assert_disabled_O.py.test.json  docstrings_stripped_OO.py  docstrings_stripped_OO.py.test.json
test/scanner_only/: scan_no_newline_after_spaces.py.raw
utils/: decode.py  pytokenize.py
